# Source Components - AND Pattern Learning Examples

add_subdirectory(LightPkg)         # Essential types (ColorType, FlashType)
add_subdirectory(Light)            # Simple Light with AND pattern demonstration
add_subdirectory(Timer)            # Timer component with time-based AND aspects
add_subdirectory(Sensor)           # Sensor component with multi-aspect AND pattern
add_subdirectory(SmartLight)       # Advanced component combining multiple AND patterns
