add_subdirectory(MotorData)
add_subdirectory(MotorController)
add_subdirectory(MotorPositionSensor)
add_subdirectory(MotorDisplay)
add_subdirectory(CRDisplay)
add_subdirectory(RobotArm)
add_subdirectory(UserInput)
add_subdirectory(CRRobotArmManager)
add_subdirectory(RealTimeTaskManager)
add_subdirectory(SafetyMonitor)
